--- a/pages/products.html
+++ b/pages/products.html
@@ -3,23 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="/pages/css/styleburger.css">
+    <link rel="icon" href="/img/favicon.ico" type="image/gif" sizes="16x16">
+    <title>Fantastic Burger</title>
 </head>
 <body>
-    <ul>
-        <li>
-            <a href="/">Home</a>
-        </li>
-        <li>
-            <a href="/pages/products.html">Products</a>
-        </li>
-        <li>
-            <a href="/pages/orders.html">Orders</a>
-        </li>
-        <li>
-            <a href="/about.html">Abouts</a>
-        </li>
-    </ul>
-    <h1>products</h1>
+    <h1 class="focim">Étlap</h1>
+    <div class="menu">
+
+        <ul class="menu">
+            <li>
+                <a href="/">Home</a>
+            </li>
+            <li>
+                <a href="/pages/products.html">Étlap</a>
+            </li>
+            <li>
+                <a href="/pages/orders.html">Orders</a>
+            </li>
+            <li>
+                <a href="/about.html">Abouts</a>
+            </li>
+        </ul>
+    </div>
 </body>
 </html>
