--- a/index2.html
+++ b/index2.html
@@ -10,8 +10,6 @@
 </head>
 
 <body>
-    <h1 class="focim">Fantastic Burger</h1>
-    <img class="dekor" src="/img/burger.jpg" alt="hamburger-hazilag">
     <ul class="menu">
         <li>
             <a href="/">Home</a>
@@ -26,7 +24,7 @@
             <a href="/about.html">Abouts</a>
         </li>
     </ul>
-    <h2 class="alcim">Kiemelt ajánlatunk :</h2>
+    <h1>Fantastic Burger</h1>
     <ul>
         <li>
             Meat lover
@@ -39,7 +37,7 @@
         <li>Vegetarian</li>
         <li>Piedone</li>
     </ul>
-    <h2 class="alcim">Step of orders</h2>
+    <h2>Step of orders</h2>
     <ol>
         <li>Choose a burger</li>
         <li>Buy it</li>
