--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
             <a href="/pages/orders.html">Rendelés</a>
         </li>
         <li>
-            <a href="/about.html">Rólunk</a>
+            <a href="/about.html">Abouts</a>
         </li>
     </ul>
 </div>
@@ -46,7 +46,7 @@
 </div>
 </nav>
     <h1>About</h1>
-    <table>
+    <table class="opening">
         <caption>Opening hours</caption>
         <thead>
             <tr>
