--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
     <nav>
+        <div class="content">
     <ul class="menu">
         <li>
             <a href="/">Home</a>
@@ -26,7 +27,7 @@
         </li>
     </ul>
 </div>
-<div id="weather">
+<div class="content" id="weather">
   <div>Időjárás</div>
   <div class="clearfix" id="promo"></div>
   <div>
@@ -45,8 +46,8 @@
   <div>A mai középhőmérséklet : <span id="tempNum" >..</span> &degC</div>
 </div>
 </nav>
-    <h1>Fantastic Burger</h1>
-    <ul>
+    <h1 class="content">Fantastic Burger</h1>
+    <ul class="content">
         <li>
             Meat lover
             <ul>
@@ -58,7 +59,7 @@
         <li>Vegetarian</li>
         <li>Piedone</li>
     </ul>
-    <div>
+    <div class="content">
     <h3>Valójában mi is a "Hamburger"</h3>
     <img id="first" class="clearfix" src="/img/DSC_0817.JPG" alt="burger">
     <p class="firstp clearfix">A hamburger grillezett, fűszeres marhahúsmassza, lapos, enyhén pogácsa formájú a mi fasírtunkhoz hasonló
@@ -95,6 +96,7 @@
         pulykahúsból készült, ill. vegetáriánus szendvicset jelent. A burger változat, előfordul cégnevekben
         (például Burger King) és szóösszetételekben is (például Cheeseburger, utalással a sajtra)</p>
 </div>
+<div class="content">
     <h2>Step of orders</h2>
     <ol>
         <li>Choose a burger</li>
@@ -109,6 +111,7 @@
     <a target="blank" href="http://www.mindmegette.hu/hamburger-hazilag.recept/">
         <img width="65" src="img/burger.jpg" alt="Tasty Burger"></a>
         <script src="/js/wether.js"></script>
+    </div>
 </body>
 
 </html>
