--- a/pages/orders.html
+++ b/pages/orders.html
@@ -10,6 +10,7 @@
     <title>Document</title>
 </head>
 <body> 
+    <div class="content">
     <nav>
     <ul class="menu">
         <li>
@@ -26,7 +27,7 @@
         </li>
     </ul>
 </div>
-<div id="weather">
+<div class="content" id="weather">
   <div>Időjárás</div>
   <div class="clearfix" id="promo"></div>
   <div>
@@ -45,6 +46,7 @@
   <div>A mai középhőmérséklet : <span id="tempNum" >..</span> &degC</div>
 </div>
 </nav>
+<div class="content">
     <h1 class="focim">Hamburger Rendelés</h1>
     <span>Rendelés</span> 
     <div class="alert alert-info alert-dismissible fade show" role="alert">
@@ -135,6 +137,7 @@
         <input type="button" value="Rendelés leadása"><span>1200</span> Ft
         </div>
 
+</div>
 </div>
 </form>
 <script src="/js/wether.js"></script>
