--- a/about.html
+++ b/about.html
@@ -11,6 +11,7 @@
 
 <body>
     <nav>
+        <div class="content">
     <ul class="menu">
         <li>
             <a href="/">Főoldal</a>
@@ -26,7 +27,7 @@
         </li>
     </ul>
 </div>
-<div id="weather">
+<div class="content" id="weather"> 
   <div>Időjárás</div>
   <div class="clearfix" id="promo"></div>
   <div>
@@ -45,6 +46,7 @@
   <div>A mai középhőmérséklet : <span id="tempNum" >..</span> &degC</div>
 </div>
 </nav>
+<div class="content">
     <h1>About</h1>
     <table class="opening">
         <caption>Opening hours</caption>
@@ -85,6 +87,7 @@
         </tfoot>
         
     </table>
+</div>
     <script src="/js/wether.js"></script>
     
 </body>
