--- a/pages/products.html
+++ b/pages/products.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <nav>
+    <div class="content">
     <div class="menu">
       
       <ul class="menu">
@@ -45,6 +46,7 @@
           <div>A mai középhőmérséklet : <span id="tempNum" >..</span> &degC</div>
         </div>
   </nav>
+  <div class="content">
   <h1 class="focim">Étlap</h1>
   <div>
     <fieldset>
@@ -93,6 +95,7 @@
           </table>
         </fieldset>
     </div>
+  </div>
     <script src="/js/wether.js"></script>
 </body>
 </html>
